--- a/app/templates/shipping.html
+++ b/app/templates/shipping.html
@@ -18,82 +18,126 @@
 
                   <div class="row_1">
 
-                    <div class="row d-flex justify-content-center row_1">
+                    <h3>Ship To</h3>
 
-                      <div class="col-md-5">
-                        <div class="form-group">
-                          <input type="" name="" class="form-control shipping_input" placeholder="Ship From Location" required>
-                        </div>
+                    <div class="row">
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Company" id="ship_to_company">
                       </div>
 
-                      <div class="col-md-5">
-                        <div class="form-group">
-                          <input type="" name="" class="form-control shipping_input" placeholder="Ship To Location" required>
-                        </div>
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Address" id="ship_to_address">
                       </div>
 
-                      <div class="col-md-5"></div>
+                      <hr style="margin-bottom: 40px !important;">
 
-                      <div class="col-md-5">
-                        <button type="button" class="float-right next_btn" id="next_btn1" >Next</button>
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="City" id="ship_to_city">
                       </div>
 
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="State" id="ship_to_state">
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Zip" id="ship_to_zip">
+                      </div>
+
+                      <div class="col-md-6">
+                        <textarea rows="1" class="shipping_area shipping_input" placeholder="Special Instructions" id="special_instructions"></textarea>
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Phone Number" id="ship_to_phone_number">
+                      </div>
+
+                      <div class="col-md-6">
+                        <button type="button" class="btn-block next_btn" id="next_btn1" >Next</button>
+                      </div>
                     </div>
 
                   </div>
 
                   <div class="row_2">
 
-                    <div class="row d-flex justify-content-center">
+                    <h3>Ship From</h3>
 
-                      <div class="col-md-5">
-                        <div class="form-group">
-                          <input type="" name="" class="form-control shipping_input" placeholder="Service Level">
-                        </div>
+                    <div class="row">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Company Name" id="ship_from_company">
                       </div>
 
-                      <div class="col-md-5">
-                        <div class="form-group">
-                          <textarea rows="1" class="shipping_area shipping_input" placeholder="Special Instructions"></textarea>
-                        </div>
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Sender's Name" id="senders_name">
                       </div>
 
-                      <div class="col-md-5">
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Address" id="ship_from_address">
+                      </div>
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="City" id="ship_from_city">
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="State" id="ship_from_state">
+                      </div>
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Zip" id="ship_from_zip">
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Internal Address" id="internal_address">
+                      </div>
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Tie Line / External Phone" id="external_phone_number">
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input type="" name="" class="form-control shipping_input" placeholder="Division /  Dep." id="department">
+                      </div>
+
+                      <div class="col-md-6">
                         <button type="button" class="float-left prev_btn" id="prev_btn1">Prev</button>
+                        <button type="submit" class="float-right next_btn">Next</button>
                       </div>
 
-                      <div class="col-md-5">
-                        <button type="button" class="float-right next_btn" id="next_btn2">Next</button>
-                      </div>
-                      
+
+
                     </div>
 
                   </div>
 
                   <div class="row_3">
-                    <div class="row d-flex justify-content-center" id="row_3">
 
-                      <div class="col-md-5">
-                        <div class="form-group">
-                          <input type="" name="" class="form-control shipping_input" placeholder="Package Contents">
-                        </div>
+                    <div class="row d-flex justify-content-center">
+                      <hr style="margin-bottom: 40px !important;">
+                      <hr style="margin-bottom: 40px !important;">
+                      <div class="col-md-6 float-left">
+                        <div class="float-right spin"></div>
                       </div>
-
-                      <div class="col-md-5">
-                        <div class="form-group">
-                          <input type="" name="" class="form-control shipping_input" placeholder="Package Code">
-                        </div>
+                      <div class="col-md-6 float-left">
+                        <div class="float-left spin"></div>
                       </div>
-
-                      <div class="col-md-5">
-                        <button type="button" class="float-left prev_btn" id="prev_btn2">Prev</button>
-                      </div>
-
-                      <div class="col-md-5">
-                        <button type="submit" class="float-right next_btn">Next</button>
-                      </div>
-                      
+                      <hr style="margin-bottom: 40px !important;">
+                      <hr style="margin-bottom: 40px !important;">
                     </div>
+
                   </div>
 
                 </form>
