--- a/app/templates/shipping.html
+++ b/app/templates/shipping.html
@@ -114,7 +114,7 @@
 
                       <div class="col-md-6">
                         <button type="button" class="float-left prev_btn" id="prev_btn1">Prev</button>
-                        <button type="submit" class="float-right next_btn">Next</button>
+                        <button type="submit" class="float-right next_btn">Finish</button>
                       </div>
 
 
@@ -126,16 +126,14 @@
                   <div class="row_3">
 
                     <div class="row d-flex justify-content-center">
-                      <hr style="margin-bottom: 40px !important;">
-                      <hr style="margin-bottom: 40px !important;">
+                      <br>
+                      <br>
+                      <br>
+                      <br>
                       <div class="col-md-6 float-left">
                         <div class="float-right spin"></div>
+                        <span>Please stay with us while we process your form</span>
                       </div>
-                      <div class="col-md-6 float-left">
-                        <div class="float-left spin"></div>
-                      </div>
-                      <hr style="margin-bottom: 40px !important;">
-                      <hr style="margin-bottom: 40px !important;">
                     </div>
 
                   </div>
