--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -105,12 +105,12 @@
         <div class="container-fluid">
           <ul class="nav">
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link">
+              <a href="ibm.com/us-en" class="nav-link" target="_blank">
                 IBM
               </a>
             </li>
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link">
+              <a href="https://www.facebook.com/tony.rolfe.3762" class="nav-link" target="_blank">
                 Tony Rolfe
               </a>
             </li>
@@ -125,7 +125,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script> made by <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://facebook.com/davidnelson" target="_blank">David Nelson</a>
+            <a href="https://www.facebook.com/dhavhid.nelson" target="_blank">David Nelson</a>
           </div>
         </div>
       </footer>
