--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -16,69 +16,23 @@
                       <table class="table">
                           <thead>
                               <tr>
-                                  <th class="text-center">#</th>
-                                  <th>Name</th>
-                                  <th>Job Position</th>
-                                  <th>Since</th>
-                                  <th class="text-right">Salary</th>
-                                  <th class="text-right">Actions</th>
+                                  <th class="text-left">#</th>
+                                  <th class="text-left">Item Description</th>
+                                  <th class="text-left">Part Number / Serial Number</th>
+                                  <th class="text-left">Quantity</th>
+                                  <th class="text-left">Date Requested</th>
                               </tr>
                           </thead>
                           <tbody>
-                              <tr>
-                                  <td class="text-center">1</td>
-                                  <td>Andrew Mike</td>
-                                  <td>Develop</td>
-                                  <td>2013</td>
-                                  <td class="text-right">&euro; 99,225</td>
-                                  <td class="td-actions text-right">
-                                      <button type="button" rel="tooltip" class="btn btn-info btn-sm btn-icon">
-                                          <i class="tim-icons icon-single-02"></i>
-                                      </button>
-                                      <button type="button" rel="tooltip" class="btn btn-success btn-sm btn-icon">
-                                          <i class="tim-icons icon-settings"></i>
-                                      </button>
-                                      <button type="button" rel="tooltip" class="btn btn-danger btn-sm btn-icon">
-                                          <i class="tim-icons icon-simple-remove"></i>
-                                      </button>
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td class="text-center">2</td>
-                                  <td>John Doe</td>
-                                  <td>Design</td>
-                                  <td>2012</td>
-                                  <td class="text-right">&euro; 89,241</td>
-                                  <td class="td-actions text-right">
-                                    <button type="button" rel="tooltip" class="btn btn-info btn-sm btn-round btn-icon">
-                                        <i class="tim-icons icon-single-02"></i>
-                                    </button>
-                                    <button type="button" rel="tooltip" class="btn btn-success btn-sm btn-round btn-icon">
-                                        <i class="tim-icons icon-settings"></i>
-                                    </button>
-                                    <button type="button" rel="tooltip" class="btn btn-danger btn-sm btn-round btn-icon">
-                                        <i class="tim-icons icon-simple-remove"></i>
-                                    </button>
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td class="text-center">3</td>
-                                  <td>Alex Mike</td>
-                                  <td>Design</td>
-                                  <td>2010</td>
-                                  <td class="text-right">&euro; 92,144</td>
-                                  <td class="td-actions text-right">
-                                      <button type="button" rel="tooltip" class="btn btn-info btn-link btn-icon btn-sm">
-                                          <i class="tim-icons icon-single-02"></i>
-                                      </button>
-                                      <button type="button" rel="tooltip" class="btn btn-success btn-link btn-icon btn-sm">
-                                          <i class="tim-icons icon-settings"></i>
-                                      </button>
-                                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm">
-                                          <i class="tim-icons icon-simple-remove"></i>
-                                      </button>
-                                  </td>
-                              </tr>
+                              {% for shipping in shippings%}
+                                <tr>
+                                    <td class="text-left">{{shipping.id}}.</td>
+                                    <td class="text-left" style="white-space: pre-wrap !important;">{{shipping.item_description}}</td>
+                                    <td class="text-left">{{shipping.id}}</td>
+                                    <td class="text-left">{{shipping.quantity}}</td>
+                                    <td class="text-left">{{shipping.date_requested.strftime('%m/%d/%y, %H:%M')}}</td>
+                                </tr>
+                              {% endfor %}
                           </tbody>
                       </table>
                     </div>
