--- a/app/templates/script.html
+++ b/app/templates/script.html
@@ -36,34 +36,39 @@
 		$(".row_2").hide(1000, function(){
 			$(".row_3").show(1000, function(){
 				$(".steps_icon").attr("src", "/static/assets/img/step3.svg");
+
+				var ship_to_company = $("#ship_to_company").val();
+				var ship_to_address = $("#ship_to_address").val();
+				var ship_to_city = $("#ship_to_city").val();
+				var ship_to_state = $("#ship_to_state").val();
+				var ship_to_zip = $("#ship_to_zip").val();
+				var special_instructions = $("#special_instructions").val();
+				var ship_to_phone_number = $("#ship_to_phone_number").val();
+
+				var ship_from_company = $("#ship_from_company").val();
+				var senders_name = $("#senders_name").val();
+				var ship_from_address = $("#ship_from_address").val();
+				var ship_from_city = $("#ship_from_city").val();
+				var ship_from_state = $("#ship_from_state").val();
+				var ship_from_zip = $("#ship_from_zip").val();
+				var external_phone_number = $("#external_phone_number").val();
+				var department = $("#department").val();
+
+				var item_description = $("#item_description").val();
+				var quantity = $("#quantity").val();
+
+				req = $.ajax({
+					url: '/request_shipping',
+					type: 'POST',
+					data: { ship_to_company, ship_to_address, ship_to_city, ship_to_state, ship_to_zip, special_instructions, ship_to_phone_number, ship_from_company, senders_name, ship_from_address, ship_from_city, ship_from_state, ship_from_zip, external_phone_number, department, item_description, quantity },
+					success: function(){
+						window.location.replace("/dashboard").delay(10000);
+					},
+					error: function(){
+						$(".info_text").text("Error... Please be sure that you filled all neccessary input fields");
+					}
+				});
 			});
-		});
-
-		var ship_to_company = $("#ship_to_company").val();
-		var ship_to_address = $("#ship_to_address").val();
-		var ship_to_city = $("#ship_to_city").val();
-		var ship_to_state = $("#ship_to_state").val();
-		var ship_to_zip = $("#ship_to_zip").val();
-		var special_instructions = $("#special_instructions").val();
-		var ship_to_phone_number = $("#ship_to_phone_number").val();
-
-		var ship_from_company = $("#ship_from_company").val();
-		var senders_name = $("#senders_name").val();
-		var ship_from_address = $("#ship_from_address").val();
-		var ship_from_city = $("#ship_from_city").val();
-		var ship_from_state = $("#ship_from_state").val();
-		var ship_from_zip = $("#ship_from_zip").val();
-		var internal_address = $("#internal_address").val();
-		var external_phone_number = $("#external_phone_number").val();
-		var department = $("#department").val();
-
-		req = $.ajax({
-			url: '/request_shipping',
-			type: 'POST',
-			data: { ship_to_company, ship_to_address, ship_to_city, ship_to_state, ship_to_zip, special_instructions, ship_to_phone_number, ship_from_company, senders_name, ship_from_address, ship_from_city, ship_from_state, ship_from_zip, internal_address, external_phone_number, department },
-			success: function(){
-				window.location.replace("/dashboard");
-			}
 		});
 
 	});
@@ -108,7 +113,8 @@
 					// If message is exist we alert user already exists
 
 					if (data.data == "exist"){
-						alert("User already exist")
+						$(".error_div").empty();
+						$(".error_div").append('<div class="alert danger_error" role="alert">User already exist</div>');
 					}
 				}
 			})
@@ -145,7 +151,8 @@
 				// If message is error we send a different message
 
 				if (data.data == "error"){
-					alert("Invalid username and password");
+					$(".error_div").empty();
+					$(".error_div").append('<div class="alert danger_error" role="alert">Invalid email or password</div>');
 				}
 			}
 		});
