re-created register models and register form

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input class="form-control login_input" id="password" placeholder="Password" required />
+                        <input type="password" class="form-control login_input" id="password" placeholder="Password" required />
                       </div>
                     </div>
                     <div class="col-md-12">
