--- a/app/templates/shipping.html
+++ b/app/templates/shipping.html
@@ -18,45 +18,43 @@
 
                   <div class="row_1">
 
-                    <h3>Ship To</h3>
-
                     <div class="row">
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Company" id="ship_to_company">
+                        <textarea required rows="1" class="shipping_area shipping_input" placeholder="Attention" id="attention"></textarea>
                       </div>
 
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Address" id="ship_to_address">
-                      </div>
-
-                      <hr style="margin-bottom: 40px !important;">
-
-                      <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="City" id="ship_to_city">
-                      </div>
-
-                      <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="State" id="ship_to_state">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Company" id="company">
                       </div>
 
                       <hr style="margin-bottom: 40px !important;">
 
                       <div class="col-md-6">
-                        <input required type="number" name="" class="form-control shipping_input" placeholder="Zip" id="ship_to_zip">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Address (1)" id="address1">
                       </div>
 
                       <div class="col-md-6">
-                        <textarea required rows="1" class="shipping_area shipping_input" placeholder="Special Instructions" id="special_instructions"></textarea>
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Address (2)" id="address2">
                       </div>
 
                       <hr style="margin-bottom: 40px !important;">
 
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Phone Number" id="ship_to_phone_number">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="City" id="city">
                       </div>
 
                       <div class="col-md-6">
-                        <textarea required rows="1" class="shipping_area shipping_input" placeholder="Item Description" id="item_description"></textarea>
+                        <input required rows="1" class="shipping_area shipping_input" placeholder="State Province" id="state_province" />
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Postal Code" id="postal_code">
+                      </div>
+
+                      <div class="col-md-6">
+                        <textarea required rows="1" class="shipping_area shipping_input" placeholder="Country" id="country"></textarea>
                       </div>
 
                       <hr style="margin-bottom: 40px !important;">
@@ -71,56 +69,53 @@
 
                   <div class="row_2">
 
-                    <h3>Ship From</h3>
-
                     <div class="row">
 
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Company Name" id="ship_from_company">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Template Name" id="template_name">
                       </div>
 
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Sender's Name" id="senders_name">
-                      </div>
-
-                      <hr style="margin-bottom: 40px !important;">
-
-                      <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Address" id="ship_from_address">
-                      </div>
-
-                      <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="City" id="ship_from_city">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Type" id="type">
                       </div>
 
                       <hr style="margin-bottom: 40px !important;">
 
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="State" id="ship_from_state">
+                        <input required type="number" name="" class="form-control shipping_input" placeholder="Length" id="length">
                       </div>
 
                       <div class="col-md-6">
-                        <input required type="number" name="" class="form-control shipping_input" placeholder="Zip" id="ship_from_zip">
-                      </div>
-
-                      <hr style="margin-bottom: 40px !important;">
-
-                      <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Tie Line / External Phone" id="external_phone_number">
+                        <input required type="number" name="" class="form-control shipping_input" placeholder="Width" id="width">
                       </div>
 
                       <hr style="margin-bottom: 40px !important;">
 
                       <div class="col-md-6">
-                        <input required type="" name="" class="form-control shipping_input" placeholder="Division /  Dep." id="department">
+                        <input required type="number" name="" class="form-control shipping_input" placeholder="Height" id="height">
                       </div>
 
                       <div class="col-md-6">
-                        <input required type="number" name="" class="form-control shipping_input" placeholder="Quantity" id="quantity">
+                        <input required type="number" name="" class="form-control shipping_input" placeholder="Weight" id="weight">
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Tracking Number" id="tracking_number">
+                      </div>
+
+                      <hr style="margin-bottom: 40px !important;">
+
+                      <div class="col-md-6">
+                        <input required type="" name="" class="form-control shipping_input" placeholder="Carrier" id="carrier">
                       </div>
 
                       <div class="col-md-6">
                         <button type="button" class="float-left prev_btn" id="prev_btn1">Prev</button>
+                      </div>
+
+                      <div class="col-md-6">
                         <button type="submit" class="float-right next_btn">Finish</button>
                       </div>
 
@@ -131,18 +126,14 @@
                   </div>
 
                   <div class="row_3">
-
+                    <br>
                     <div class="row d-flex justify-content-center">
-                      <br>
-                      <br>
-                      <br>
-                      <br>
-                      <div class="col-md-6 float-center">
-                        <div class="float-right spin"></div>
-                        <span class="info_text" style="margin-left: 40px;">Please stay with us while we process your form</span>
+                      <div class="col-md-8">
+                        <div class="float-left spin" style="margin-left: -130px !important;"></div>
+                        <p class="text-center info_text">Please stay with us while we process your form</p>
                       </div>
                     </div>
-
+                    <br>
                   </div>
 
                 </form>
